* Added parameter "pvaluesApaStyle" to various functions. If this parameter is TRUE, p-values less than 0.001 are indicated as "p < 0.001" instead of being rounded to "p = 0.000".
* Added parameter "showTotalN" to "sjt.xtab" to show column and row sums even if parameter "showObserved" is FALSE.

Bug fixes:
* Fixed bug with type = "dots" in "sjp.grpfrq".
* Fixed bug with predictor labelling in "sjp.lm" and "sjp.glm" when parameter "labelPredictors" was not used.


Version 1.6.5
------------------------------------------------------------------------------
New functions:
* New function "sjp.int", which can plot regression lines or probability curves of interaction effects in (generalized) linear (mixed effects) models, i.e. fitted models of class "lm", "glm", "lmerMod" and "glmerMod" are covered by this function.

Changes to functions:
* Renamed "sjs.betaCoef" to "sjs.stdb".
* "sjp.lm.int" was merged with function "sjp.int".
* Added parameter "ri.nr" to "sjp.glmer" and "sjp.lmer" to select which random effects of which random intercept to plot, in case the model has multiple random intercepts.
* Added parameters "showValueLabels", "labelDigits" and "showPValueLabels" to "sjp.glmer" and "sjp.lmer" to plot beta or odds ratio values and p-value-stars to fixed effects plots.
* Added paramerter "title.align" to "sjp.setTheme" to change alignment of plot title.
* "sjt.xtab" can now show/hide observed values in table cells with "showObserved" parameter.
* "sjt.df" now distinguishes more variable / vector types (like ordinal and categorial, instead of factor only, or double, integer and numeric).
* "sjp.lm1" no longer requires the data frame used to fit the model.
* Added parameter "useResiduals" to "sjp.lm1", so residuals may be plotted against predictor (for diagnostic purposes).
* Added parameters "showCountValues" and "showPercentageValues" to function "sjp.xtab", so either percentage value labels, count value labels or both can be printed.